--- a/main/index.html
+++ b/main/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator CI/CD Keren</title>
+  <title>Kalkulator CI/CD Keren - Versi Develop</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -33,6 +33,9 @@
       <button onclick="appendToDisplay('0')" class="zero">0</button>
       <button onclick="appendToDisplay('.')">.</button>
     </div>
+    <p style="color: white; font-size: 0.8em; margin-top: 10px;">
+        Build dari branch develop - buat perubahan 
+    </p>
   </div>
   <script src="script.js"></script>
 </body>
